@@ -1,6 +1,9 @@
 2010-06-15  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpn/x86/k7/mod_1_1.asm: New file.
+	* mpn/x86/pentium4/sse2/mod_1_1.asm (mpn_mod_1_1p_cps): Rewrite.
+	* mpn/x86/k7/mod_1_4.asm (mpn_mod_1s_4p_cps): Rewrite.
+	* mpn/x86/pentium4/sse2/mod_1_4.asm (mpn_mod_1s_4p_cps): Rewrite.
 
 	* mpn/generic/mod_1_1.c (mpn_mod_1_1p_cps): Store results as they are
 	computed.
